crates/service/tests/diagnostics/snapshots/features__diagnostics__typeck__type_mismatch_from_func_results.snap
---
source: crates/service/tests/diagnostics/typeck.rs
expression: response
---
{
  "kind": "full",
  "items": [
    {
      "range": {
        "start": {
          "line": 6,
          "character": 17
        },
        "end": {
          "line": 6,
          "character": 31
        }
      },
      "severity": 1,
      "source": "wat",
      "message": "expected type `i32`, found `i64`"
    }
  ]
}
